--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-VITE_SPOTIFY_CLIENT_ID=seu_client_id_aqui
+VITE_SPOTIFY_CLIENT_ID=cfcd496346374776861564414cc3656c
 VITE_SPOTIFY_CLIENT_SECRET=18c5e1fea4e444ce84cd340e0c3d07ae
 VITE_REDIRECT_URI=http://localhost:3000/music
+VITE_API_URL=http://localhost:5000
