--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.6",
-    "framer-motion": "^12.4.3",
+    "axios": "^1.7.9",
+    "emoji-picker-react": "^4.12.0",
+    "framer-motion": "^12.4.7",
     "react": "^19.0.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "react-spotify-web-playback": "^0.14.7",
     "spotify-web-api-js": "^1.5.2",
+    "tailwind-scrollbar": "^4.0.0",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
