--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_SPOTIFY_CLIENT_ID=cfcd496346374776861564414cc3656c
 VITE_SPOTIFY_CLIENT_SECRET=18c5e1fea4e444ce84cd340e0c3d07ae
-VITE_REDIRECT_URI=https://timo-six.vercel.app/music
+VITE_REDIRECT_URI=https://timo-six.vercel.app/auth/spotify/callback
 VITE_API_URL=http://localhost:5000
