--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ VITE_SPOTIFY_CLIENT_ID=cfcd496346374776861564414cc3656c
 VITE_SPOTIFY_CLIENT_SECRET=18c5e1fea4e444ce84cd340e0c3d07ae
 VITE_REDIRECT_URI=https://timo-six.vercel.app/spotify-callback
 VITE_API_URL=http://localhost:5000
+
+REACT_APP_API_URL=http://localhost:3001
+REACT_APP_UPLOADS_URL=http://localhost:3001/uploads
